src/tests/data/SemanticErrors/DeclWithNoDef.c

#include <stdio.h>

void f();

int main()
{
    f();    // ERROR

	return 0;
}